small fix to layout break on twitter feed

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,7 @@ body {
     font-size: 14px;
     color: #fff;
     border-radius: 8px;
+    word-break:break-word;
 
     a {
       color: #fff;
